# rhubarb

./: Cargo.toml  README.md  database_config.toml  mock_data.csv  todo.md
mock_data/: assets.csv
src/: config.rs  data_pipeline.rs  database.rs  database_pipeline.rs  lib.rs  main.rs  parse_command.rs  parse_old.rs  parse_set.rs  parser.rs  pipeline.rs  role_registry.rs  set_registry.rs
