[package]
name = "rhubarb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
csv = "1.3.0"
nom = "7.1.3"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.13"
